--- a/css/appreciate_details.css
+++ b/css/appreciate_details.css
@@ -23,8 +23,9 @@ button{
     overflow: hidden;
 }
 .wrapper>p{
-    font-size:16px;
-    padding:30px 0;
+    font-size:18px;
+    padding-top:26px;
+    margin-bottom: 20px;
 }
 .section1{
     width:1400px;
@@ -119,7 +120,7 @@ button{
     color:#bbb;
 }
 .msg>a{
-    display:block;
+    display:none;
     width:360px;
     height:34px;
     border:2px solid #b5b5b5;
