--- a/css/artifact_details.css
+++ b/css/artifact_details.css
@@ -17,8 +17,9 @@ a:hover{
     padding-bottom: 50px;
 }
 .wrapper>p{
-    font-size:16px;
-    padding:30px 0;
+    font-size:18px;
+    padding-top:26px;
+    margin-bottom:20px;
 }
 .title{
     overflow: hidden;
