--- a/css/digitization_details.css
+++ b/css/digitization_details.css
@@ -23,8 +23,8 @@ button{
     overflow: hidden;
 }
 .wrapper>p{
-    font-size:16px;
-    padding:30px 0;
+    font-size:18px;
+    padding-top:26px;
 }
 .section1{
     width:1400px;
