--- a/css/digitization_museum_more.css
+++ b/css/digitization_museum_more.css
@@ -20,10 +20,8 @@ a:hover{
     border-bottom: 3px solid #eee;
 }
 .section1>p{
-    height:50px;
-}
-.section1>p span{
-    line-height:50px;
+    font-size:18px;
+    padding-top:26px;
 }
 .common{
     font-size:20px;
