--- a/css/history_more.css
+++ b/css/history_more.css
@@ -21,10 +21,9 @@ button{
     overflow: hidden;
 }
 .wrapper>p{
-    height:50px;
-}
-.wrapper>p span{
-    line-height:50px;
+    font-size:18px;
+    padding-top:26px;
+    margin-bottom: 20px;
 }
 .section1{
     float:left;
