--- a/css/index_showdetails.css
+++ b/css/index_showdetails.css
@@ -17,10 +17,9 @@
     overflow: hidden;
 }
 .wrapper>p{
-    height:50px;
-}
-.wrapper>p span{
-    line-height:50px;
+    font-size:18px;
+    padding-top:26px;
+    margin-bottom: 10px;
 }
 .picture{
     width:1300px;
