--- a/css/information_details.css
+++ b/css/information_details.css
@@ -16,8 +16,8 @@
     overflow: hidden;
 }
 .wrapper>p{
-    font-size:16px;
-    padding:30px 0;
+    font-size:18px;
+    padding-top:26px;
 }
 h4,h6, .content, .btom{
     margin:0 auto;
