--- a/css/museum_details.css
+++ b/css/museum_details.css
@@ -23,10 +23,9 @@ a:hover{
     overflow: hidden;
 }
 .wrapper>p{
-    height:50px;
-}
-.wrapper>p span{
-    line-height:50px;
+    font-size:18px;
+    padding-top:26px;
+    margin-bottom: 20px;
 }
 .wrapper h3{
     margin-bottom:20px;
