--- a/css/museum_details.css
+++ b/css/museum_details.css
@@ -28,7 +28,21 @@ a:hover{
     margin-bottom: 20px;
 }
 .wrapper h3{
-    margin-bottom:20px;
+    /*margin-bottom:20px;*/
+}
+.information_link{
+    display:block;
+    width:80px;
+    height:25px;
+    color:#fff;
+    font-size:14px;
+    background-color:#c2313c;
+    margin-top:10px;
+}
+.information_link span{
+    display:inline-block;
+    margin-left:12px;
+    line-height:25px;
 }
 .section_lf{
     width:1400px;
