--- a/css/index_appointment.css
+++ b/css/index_appointment.css
@@ -94,9 +94,9 @@
     width:180px;
     height:40px;
     text-align: center;
-    border-radius: 50%;
     color:#888;
     -webkit-border-radius:20px;
+    -ms-border-radius:20px;
     -moz-border-radius:20px;
 }
 .panel{
