--- a/css/index_login.css
+++ b/css/index_login.css
@@ -46,7 +46,8 @@
     position: absolute;
     left:50%;
     bottom: 0;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
 }
 .content{
     width:314px;
