--- a/css/picture_search.css
+++ b/css/picture_search.css
@@ -85,7 +85,8 @@
     position:relative;
     left:48%;
     top:50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
 }
 .bgimg div p{
     position:absolute;
